fixed overlap editorbug

--- a/style.css
+++ b/style.css
@@ -6,13 +6,22 @@ body{
 width:98vw;
 }
 
+.button-pad {
+	padding:5px;
+}
+
+.flex {
+display:flex;
+justify-content:space-between;
+}
+
 .darken {
 	background:rgba(0,0,0,.6);
 }
 .fullscreen {
 	position:absolute;
-	width:100vw;
-	height:100vh;
+	width:98vw;
+	height:99vh;
 }
 
 .solid {
@@ -22,7 +31,7 @@ width:98vw;
 }
 
 #new-post-pane {
-	margin:10% 0 0 25%;
+	margin:2% 2% 0 45%;
 	height:600px;
 	display:flex;
 	flex-direction:column;
